ingress/ingress-external.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: "external"
spec:
  rules:
  - host: boo.jiannc.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
